--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,9 @@
 ---
-active_modules: [pygments, tags, blog, latex, videos]
+active_modules: [pygments, tags, blog, disqus, latex, videos]
 author: Danilo Bargen
 canonical_url: http://w00t.ws
 modules:
     pygments:
         style: tango
+    disqus:
+        shortname: dbrgn
