--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 ---
-active_modules: [pygments, tags, blog, disqus, latex, videos]
+active_modules: [pygments, tags, blog, disqus, latex, videos, iframe]
 author: Danilo Bargen
 canonical_url: http://blog.dbrgn.ch/
 modules:
